--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-image: url('../images/back.jpg');
+    background-size: cover; /* Ajusta a imagem para cobrir toda a tela */
+    background-repeat: no-repeat;
+}
+
+
+
+
 .menu {
     text-align: center;
     position: absolute;
@@ -12,7 +25,7 @@
     display: block;
     padding: 30px;
     border-radius: 15px;
-    background-image: url('../images/fundo.jpg'); /* Caminho para imagem de background */
+    background-image: url('../images/poldword.jpeg'); /* Caminho para imagem de background */
     background-size: cover;
     background-position: center;
 }
