--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,6 @@ body {
     background-repeat: no-repeat;
 }
 
-
-
-
 .menu {
     text-align: center;
     position: absolute;
@@ -73,8 +70,6 @@ body {
     display: none;
 }
 
-
-
 .game-board {
     width: 80%;
     height: 500px;
@@ -107,6 +102,20 @@ body {
     width: 500px;
     animation: clouds-animation 25s infinite linear;
 }
+
+.score {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-family: 'Press Start 2P', cursive; 
+    font-size: 24px;
+    color: #fff; /* Cor branca */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra no texto */
+    padding: 10px 20px;
+    background-color: #FF8000; 
+    border-radius: 8px;
+}
+
 
 @keyframes pipe-animation {
     from {
