--- a/PoldoWord-SM-Project-main-MODIFIED/css/style.css
+++ b/PoldoWord-SM-Project-main-MODIFIED/css/style.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('../images/back.jpg');
+  background-image: url("../images/back.jpg");
   background-size: cover; /* Ajusta a imagem para cobrir toda a tela */
   background-repeat: no-repeat;
 }
@@ -136,9 +136,9 @@ body {
 }
 
 .game-board {
-  width: 100%;
+  width: 100vw;
   height: 500px;
-  border-bottom: 15px solid rgb(35, 160, 35);
+  border-bottom: 20px solid #3a6623;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
@@ -191,7 +191,7 @@ body {
 
 .game-over-screen {
   position: fixed;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: rgba(0, 0, 0, 0.8);
