--- a/PoldoWord-SM-Project-main-MODIFIED/css/style.css
+++ b/PoldoWord-SM-Project-main-MODIFIED/css/style.css
@@ -45,11 +45,15 @@ body {
   top: -12%;
 }
 
-.logo {
+#logo {
   margin: 0;
   width: 150px;
   height: 85px;
   filter: drop-shadow(0 0 0.75rem #e62311);
+}
+
+.logo-animation {
+  animation: logo-animation 0.8s forwards ease-in;
 }
 
 .input-container {
@@ -276,5 +280,17 @@ body {
   }
   to {
     right: 100%;
+  }
+}
+
+@keyframes logo-animation {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(350deg) scale(1.5);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
   }
 }
