test: adding pipe image and styles

--- a/PoldoWord-SM-Project-main-MODIFIED/css/style.css
+++ b/PoldoWord-SM-Project-main-MODIFIED/css/style.css
@@ -163,8 +163,9 @@ body {
 
 .pipe {
   position: absolute;
-  bottom: 0;
-  width: 75px;
+  bottom: -2%;
+  width: 70px;
+  rotate: 2deg;
   animation: pipe-animation 1.5s infinite linear;
 }
 
