--- a/PoldoWord-SM-Project-main-MODIFIED/css/style.css
+++ b/PoldoWord-SM-Project-main-MODIFIED/css/style.css
@@ -172,8 +172,10 @@ body {
 .grass {
   position: absolute;
   bottom: 0;
-  width: 100vw;
-  height: 280px;
+  width: 100%;
+  height: 55px; /* Ajuste a altura conforme necessário */
+  background: url('./images/grama.png') repeat-x; /* Certifique-se de que a imagem está no local correto */
+  background-size: cover; /* Ajusta o tamanho da imagem para cobrir toda a largura */
 }
 
 .jump {
@@ -228,7 +230,6 @@ body {
   background-color: #007bb5;
 }
 
-
 .restart-button,
 .menu-button {
   font-size: 24px;
@@ -246,7 +247,6 @@ body {
 .menu-button:hover {
   background-color: #43af35;
 }
-
 
 @keyframes pipe-animation {
   from {
