--- a/PoldoWord-SM-Project-main-MODIFIED/css/style.css
+++ b/PoldoWord-SM-Project-main-MODIFIED/css/style.css
@@ -250,7 +250,7 @@ body {
 
 @keyframes pipe-animation {
   from {
-    right: -80px;
+    right: -60px; /* Ajuste de acordo com a largura do pipe */
   }
   to {
     right: 100%;
